--- a/.gitignore
+++ b/.gitignore
@@ -1,129 +1,119 @@
-# Byte-compiled / optimized / DLL files
-__pycache__/
-*.py[cod]
-*$py.class
+import turtle
+t = turtle.Turtle()
+s=turtle.Screen()
+t.speed(5)
+#body
+t.fillcolor("black")
+t.begin_fill()
+for n in range(0, 2):       
+    t.forward(300)
+    t.left(90)
+    t.forward(100)
+    t.left(90)
+t.end_fill()
+#legs
+t.fillcolor("red")
+t.begin_fill()
+t.forward(30)
+t.right(90)
+t.forward(60)
+t.left(90)
+t.forward(30)
+t.left(90)
+t.forward(60)
+t.end_fill()
+t.fillcolor("red")
+t.begin_fill()
+t.right(90)
+t.forward(30)
+t.right(90)
+t.forward(60)
+t.left(90)
+t.forward(30)
+t.left(90)
+t.forward(60)
+t.end_fill()
+t.fillcolor("red")
+t.begin_fill()
+t.right(90)
+t.forward(30)
+t.right(90)
+t.forward(60)
+t.left(90)
+t.forward(30)
+t.left(90)
+t.forward(60)
+t.end_fill()
+t.fillcolor("red")
+t.begin_fill()
+t.right(90)
+t.forward(30)
+t.right(90)
+t.forward(60)
+t.left(90)
+t.forward(30)
+t.left(90)
+t.forward(60)
+t.end_fill()
+t.back(60)
+#tail
+t.forward(60)
+t.right(90)
+t.forward(60)
+t.left(90)
+t.forward(60)
+t.right(90)
+t.fillcolor("black")
+t.begin_fill()
+t.forward(80)
+t.left(90)
+t.forward(20)
+t.left(90)
+t.forward(80)
+t.right(90)
+t.forward(20)
+t.left(90)
+t.end_fill()
+t.forward(300)
+#head
+t.fillcolor("red")
+t.begin_fill()
+t.right(90)
+t.forward(60)
+t.left(90)
+t.forward(80)
+t.left(90)
+t.forward(60)
+t.left(90)
+t.forward(80)
+t.end_fill()
+t.fillcolor("black")
+t.begin_fill()
+t.right(90)
+t.forward(20)
+t.right(135)
+t.forward(28)
+t.right(135)
+t.forward(20)
+t.end_fill()
+t.left(90)
+t.forward(35)
+t.left(90)
+t.forward(25)
+t.fillcolor("lightblue")
+t.begin_fill()
+t.circle(10)
+t.end_fill()
+t.forward(25)
+t.fillcolor("lightblue")
+t.begin_fill()
+t.circle(10)
+t.end_fill()
+t.forward(30)
 
-# C extensions
-*.so
 
-# Distribution / packaging
-.Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-pip-wheel-metadata/
-share/python-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
-MANIFEST
 
-# PyInstaller
-#  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/other infos into it.
-*.manifest
-*.spec
 
-# Installer logs
-pip-log.txt
-pip-delete-this-directory.txt
 
-# Unit test / coverage reports
-htmlcov/
-.tox/
-.nox/
-.coverage
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*.cover
-*.py,cover
-.hypothesis/
-.pytest_cache/
 
-# Translations
-*.mo
-*.pot
-
-# Django stuff:
-*.log
-local_settings.py
-db.sqlite3
-db.sqlite3-journal
-
-# Flask stuff:
-instance/
-.webassets-cache
-
-# Scrapy stuff:
-.scrapy
-
-# Sphinx documentation
-docs/_build/
-
-# PyBuilder
-target/
-
-# Jupyter Notebook
-.ipynb_checkpoints
-
-# IPython
-profile_default/
-ipython_config.py
-
-# pyenv
-.python-version
-
-# pipenv
-#   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
-#   However, in case of collaboration, if having platform-specific dependencies or dependencies
-#   having no cross-platform support, pipenv may install dependencies that don't work, or not
-#   install all needed dependencies.
-#Pipfile.lock
-
-# PEP 582; used by e.g. github.com/David-OConnor/pyflow
-__pypackages__/
-
-# Celery stuff
-celerybeat-schedule
-celerybeat.pid
-
-# SageMath parsed files
-*.sage.py
-
-# Environments
-.env
-.venv
-env/
-venv/
-ENV/
-env.bak/
-venv.bak/
-
-# Spyder project settings
-.spyderproject
-.spyproject
-
-# Rope project settings
-.ropeproject
-
-# mkdocs documentation
-/site
-
-# mypy
-.mypy_cache/
-.dmypy.json
-dmypy.json
-
-# Pyre type checker
-.pyre/
+s.exitonclick()
